# europe

./: .env.example  .gitattributes  .gitignore  CLAUDE.md  README.md  package-lock.json  package.json  playwright.config.ts
client/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
client/src/: cameraCollider.ts  character.ts  game.ts  input.ts  main.ts  network.ts  terrain.ts  testMode.ts
e2e/: fixtures.ts  scene.spec.ts  seam.spec.ts  viewpoint.spec.ts  visual.spec.ts
server/: node-pg-migrate.json  package-lock.json  package.json  tsconfig.json
server/migrations/: 001_initial_schema.sql  002_spawn_defaults.sql  003_world_tiles.sql
server/src/: db.ts  index.ts  tiles.ts  world.test.ts  world.ts
shared/: types.ts
tools/gis-pipeline/: pyproject.toml
tools/gis-pipeline/full-run/: pipeline.json
tools/gis-pipeline/gis_pipeline.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
tools/gis-pipeline/pipeline/: cli.py  config.py  fetch.py  mesh.py  preprocess.py  tiler.py  upload.py
tools/gis-pipeline/test-run/: pipeline.json
