[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "gis-pipeline"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "click>=8.0",
    "rasterio>=1.3",
    "numpy>=1.24",
    "trimesh>=4.0",
    "DracoPy>=1.4",
    "boto3>=1.26",
    "Pillow>=10.0",
    "mercantile>=1.2",
    "tqdm>=4.0",
]

[project.scripts]
pipeline = "pipeline.cli:main"
